async_pub_sub_macros/tests/fail/missing_publisher.stderr
error: DerivePublisher macro requires that your struct must have at least one field that implements the Publisher trait or is marked with #[publisher]
 --> tests/fail/missing_publisher.rs:4:1
  |
4 | / struct InvalidPublisher {
5 | |     other_field: String,
6 | | }
  | |_^
